2010-08-20 - 0.0.33 - Nils K. Windisch
	* a title tag for links