@@ -40,7 +40,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'clearCacheOnLoad' => 0,
 	'lockType' => '',
 	'author_company' => 'Goettingen State and University Library, Germany http://www.sub.uni-goettingen,de',
-	'version' => '0.0.33',
+	'version' => '0.0.34',
 	'constraints' => array(
 		'depends' => array(
 			'nkwlib' => '',
