@@ -1,2 +1,4 @@
 2010-08-20 - 0.0.33 - Nils K. Windisch
 	* a title tag for links
+2010-08-30 - 0.0.34 - Nils K. Windisch
+	* Bug Fix: menu open and pages on fourth level selected
